🔵 Add meta icons.

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="%PUBLIC_URL%/assets/img/favicon.png">
-  <title>💖 I Need Empathy</title>
-  <!-- MANIFEST -->
+  <meta name="theme-color" content="#000000">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600" rel="stylesheet">
+
+  <title>💖 I Need Empathy - Ap app designed to guide you through consciously discovering your needs.</title>
+  <meta name="description" content="Ap app designed to guide you through consciously discovering your needs.">
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="apple-touch-icon" href="/ineedempathy/logo192.png">
+  <link rel="apple-touch-startup-image" sizes="192x192" href="%PUBLIC_URL%/logo192.png">
+  <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="icon" sizes="64x64" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="icon" sizes="192x192" href="%PUBLIC_URL%/logo192.png">
 </head>
-<body class="g-sidenav-show  bg-gray-200">
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
