--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <meta name="theme-color" content="#000000">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600" rel="stylesheet">
 
-  <title>💖 I Need Empathy - Ap app designed to guide you through consciously discovering your needs.</title>
-  <meta name="description" content="Ap app designed to guide you through consciously discovering your needs.">
+  <title>💖 I Need Empathy - Embark on a unique self-discovery journey, and gain greater awareness of your needs.</title>
+  <meta name="description" content="Embark on a unique self-discovery journey, and gain greater awareness of your needs.">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="apple-touch-icon" href="/ineedempathy/logo192.png">
