--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Embark on a unique self-discovery journey, and gain greater awareness of your needs.">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="apple-touch-icon" href="/ineedempathy/logo192.png">
+  <link rel="apple-touch-icon" href="/logo192.png">
   <link rel="apple-touch-startup-image" sizes="192x192" href="%PUBLIC_URL%/logo192.png">
   <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="icon" sizes="64x64" href="%PUBLIC_URL%/favicon.ico">
