📉 Add open graph.

--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,17 @@
   <title>💖 I Need Empathy - Embark on a unique self-discovery journey, and gain greater awareness of your needs.</title>
   <meta name="description" content="Embark on a unique self-discovery journey, and gain greater awareness of your needs.">
 
+  <meta property="og:title" content="💖 I Need Empathy">
+  <meta property="og:description" content="Embark on a unique self-discovery journey, and gain greater awareness of your needs.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="%PUBLIC_URL%/logo.png">
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="apple-touch-icon" href="/logo192.png">
-  <link rel="apple-touch-startup-image" sizes="192x192" href="%PUBLIC_URL%/logo192.png">
-  <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
-  <link rel="icon" sizes="64x64" href="%PUBLIC_URL%/favicon.ico">
-  <link rel="icon" sizes="192x192" href="%PUBLIC_URL%/logo192.png">
+  <link rel="apple-touch-icon" href="/assets/img/logo192.png">
+  <link rel="apple-touch-startup-image" sizes="192x192" href="%PUBLIC_URL%/assets/img/logo192.png">
+  <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/assets/img/favicon.ico">
+  <link rel="icon" sizes="64x64" href="%PUBLIC_URL%/assets/img/favicon.ico">
+  <link rel="icon" sizes="192x192" href="%PUBLIC_URL%/assets/img/logo192.png">
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
