🎩 Fix logo path.

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <meta property="og:title" content="💖 I Need Empathy">
   <meta property="og:description" content="Embark on a unique self-discovery journey, and gain greater awareness of your needs.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="%PUBLIC_URL%/logo.png">
+  <meta property="og:image" content="%PUBLIC_URL%/assets/img/logo.png">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="apple-touch-icon" href="/assets/img/logo192.png">
